<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.fragment.AuthFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_title"
        style="?textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_auth_title"
        android:textColor="?colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/image_view_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/content_desc_app_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/button_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:text="@string/fragment_auth_button_sign_up_text"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/button_sign_in_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in_with_google"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/white"
        android:text="@string/fragment_auth_button_google_sign_in_text"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/button_sign_in_anonymously"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in_anonymously"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="@string/fragment_auth_button_anonymous_sign_in_text"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/button_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in_with_google" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_auth_button_sign_in_text"
        android:textAppearance="?textAppearanceCaption"
        android:textColor="@color/gray_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in_anonymously" />

</androidx.constraintlayout.widget.ConstraintLayout>
