<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bottom_sheet"
    android:backgroundTint="?colorSurface">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_mosquito_name"
        style="?textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nama nyamuk" />

    <com.google.android.material.textview.MaterialTextView
        style="?textAppearanceCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/fragment_machine_learning_info_panel_source_attribution_text"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_mosquito_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image_view_mosquito"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/content_desc_fragment_machine_learning_info_panel_mosquito_picture"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_mosquito_name"
        tools:src="@tools:sample/backgrounds/scenic" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_section_mosquito_features"
        style="?textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/fragment_machine_learning_info_panel_section_mosquito_features_text"
        android:textColor="?colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_mosquito" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_mosquito_features"
        style="?textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_section_mosquito_features"
        tools:text="Ciri-ciri nyamuk" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_section_mosquito_species"
        style="?textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_machine_learning_info_panel_section_mosquito_species_text"
        android:textColor="?colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_mosquito_features" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_mosquito_species"
        style="?textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_section_mosquito_species"
        tools:text="Spesies nyamuk" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_section_mosquito_carried_diseases"
        style="?textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_machine_learning_info_panel_section_mosquito_carried_diseases_text"
        android:textColor="?colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_mosquito_species" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_mosquito_carried_diseases"
        style="?textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_section_mosquito_carried_diseases"
        tools:text="Penyakit nyamuk" />

</androidx.constraintlayout.widget.ConstraintLayout>
